--- a/app/templates/products/carts.html
+++ b/app/templates/products/carts.html
@@ -30,19 +30,24 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td><h5>Subtotal: R$ {{ subtotal }}</h5></td>
+                <td></td>
                 <td><h5>Total Itens: {{ sum_item_unit }} unidades</h5></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td><button class="btn btn-sm btn-danger"><a id="clear-cart-button" href=" {{url_for('cart.empty_cart')}} ">Limpar carrinho</a></button></td>
             </tr>
         </tbody>
         </table>
-        <div class="container" id="cart_summary">
-            <h5>Frete: R$ {{ freight }}</h5>
-            <td><h5>Total: R$ {{ grandtotal }}</h5></td>
+    </div>
+    <div id="cart-summary" class="container" >
+        
+        <div class="cart-checkout">
+            <p>Frete: R$ {{ freight }}</p>
+            <p>Subtotal: R$ {{ subtotal }}</p>
+            <hr>
+            <p>Total: R$ {{ grandtotal }}</p>
             <button class="btn btn-success"><a href="#">Pagar</a></button>
-            <button class="btn btn-danger"><a href=" {{url_for('cart.empty_cart')}} ">Limpar carrinho</a></button>
         </div>
+
     </div>
 {% endblock %}
