--- a/app/templates/products/single_page.html
+++ b/app/templates/products/single_page.html
@@ -8,21 +8,22 @@
               <img src="{{ url_for('static', filename='images/' + product.image) }}" alt="product.name" id="product_img_show">
         </div>
         <div class="col-md-6" id="product_details">
-            <h4>{{ product.name }}</h4>
+            <h1>{{ product.name }}</h1>
             <hr>
             <p>R$ {{ price }}</p>
             <p><b>Descrição do produto:</b></p>
             <p class="product_description">{{ product.description }}</p>
-            <div class="product_description_options">
+            <div id="product_description_options">
                 <form action="{{ url_for('cart.add_cart') }}" method="post">
                     <input type="hidden" name="product_id" value="{{ product.id }}">
                     <label for="quantity">Quantidade:</label>
                     <input type="number" name="quantity" id="" value="1" min="1" max="20">
                     <button type="submit" class="btn btn-sm btn-warning"> Adicionar ao carrinho </button>
                 </form>
-                <a href="/" class="btn btn-info" id="back_button_product_details">Voltar</a>
             </div>
+            <a href="/" class="btn btn-info">Voltar</a>
         </div>
+        
     </div>
 </div>
 
