criando mecanismo no qual apenas autenticado pode paga

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,8 +8,8 @@
         {% if current_user.is_authenticated %}
             {{current_user.username}}
         {% else %}
-            Amigo!
-        {% endif %}!</h1>
+            Amigo!!
+        {% endif %}</h1>
     {% if not known %}
     <p>Somos especilistas em jogos de tabuleiro e cartas!</p>
     {% else %}
