--- a/app/templates/products/carts.html
+++ b/app/templates/products/carts.html
@@ -43,7 +43,11 @@
         
         <div class="cart-checkout">
             {% if current_user.is_authenticated %}
+            {% if is_deliverable %}
             <p>Frete: R$ {{ (("%.2f"|format(freight))|string()).replace(".", ",") }}</p>
+            {% else %}
+<!--            <p>Frete: Lamentamos, não entregamos nesse endereço...</p>-->
+            {% endif %}
             {% else %}
             <p>Cadastre-se para saber o valor do frete.</p>
             {% endif %}
@@ -51,9 +55,13 @@
             <hr>
             <p>Total: R$ {{ (("%.2f"|format(grandtotal))|string()).replace(".", ",") }}</p>
             {% if current_user.is_authenticated %}
+            {% if is_deliverable %}
             <button class="btn btn-success"><a href="{{ url_for('cart.buy_product') }}">Pagar</a></button>
             {% else %}
-            <button class="btn btn-success"><a href="{{ url_for('auth.login') }}">Pagar</a></button>
+            <p>Lamentamos, não entregamos no seu endereço.</p>
+            {% endif %}
+            {% else %}
+            <button class="btn btn-success"><a href="{{ url_for('auth.login') }}">Cadastre-se!</a></button>
             {% endif %}
         </div>
     </div>
